2008-11-24	Ralf Corsépius <ralf.corsepius@rtems.org>

	* paranoia/paranoia.c: Add missing prototypes.

2008-10-13	Joel Sherrill <joel.sherrill@oarcorp.com>

	* unlimited/system.h: Tighten configuration for stack space.

2008-10-02	Joel Sherrill <joel.sherrill@oarcorp.com>

	* fileio/init.c: When USE_SHELL not defined, do not attempt to
	configure shell.

2008-10-02	Joel Sherrill <joel.sherrill@oarcorp.com>

	* unlimited/system.h: 10000 task ids is too many for some targets.

2008-09-18	Joel Sherrill <joel.sherrill@oarcorp.com>

	* unlimited/system.h: Support up to 10K tasks in loop. With 64MB on
	pc386 and configured for unified workspace, you can get close to
	this.

2008-09-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* fileio/system.h: Rename STACK_CHECKER_ON to more appropriate
	CONFIGURE_STACK_CHECKER_ENABLED.

2008-09-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* minimum/init.c, unlimited/system.h: Add support for optionally having
	a unified work area. In other words, the RTEMS Workspace and C
	Program Heap are the same pool of memory.

2008-09-17	Miao Yan <yanmiaobest@gmail.com>

	* hello/system.h, minimum/Makefile.am, minimum/init.c: Merge GSOC
	project code to add simple device only filesystem (devfs), optionally
	completely drop out filesystem, and to clean up disabling newlib
	reentrancy support. This dropped 17K from the minimum.exe for
	sparc/sis and arm/rtl22xx_t now has a 15K code space.

2008-09-06	Ralf Corsépius <ralf.corsepius@rtems.org>

	* capture/system.h, capture/test1.c, fileio/init.c,
	unlimited/init.c, unlimited/system.h, unlimited/test1.c:
	Convert to "bool".

2008-09-05	Joel Sherrill <joel.sherrill@oarcorp.com>

	* base_mp/node1/Makefile.am, base_mp/node2/Makefile.am: Updating and
	fixing while running mptests on psim.

2008-07-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* fileio/init.c: New argument sequence for rtems_shell_init(). Also
	split on multiple lines and document each parameter.
